# libnv-rs

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  contributing.md  flake.nix  justfile  rustfmt.toml  shell.nix
.github/workflows/: audit.yml  ci.yml
examples/: leak.rs  libvn_sigsegv.rs
libnv-sys/: Cargo.toml  bindgen.sh  build.rs
libnv-sys/bindgen/: bindgen.sh
libnv-sys/src/: fakes.rs  ffi.rs  lib.rs
src/: lib.rs  libnv.rs  nvpair.rs
