[package]
name = "libnv"
version = "0.2.1"
authors = ["Andrey Cherkashin <with.out@me.com>"]
categories = ["api-bindings", "data-structures", "os"]
license = "BSD-2-Clause"
description = "Safe and rustic wrapper around libnv-sys."
repository = "https://github.com/Inner-Heaven/libnv-rs"

[package.metadata.release]
sign-commit = true
upload-doc = false
dev-version-ext = "pre"

[features]
default = ["libnv", "nvpair"]
libnv = ["libnv-sys"]
nvpair = ["nvpair-sys"]

[dependencies]
libc = "0.2"
quick-error = "1.2"
nvpair-sys = { version = "0.1.0", optional = true }
libnv-sys = { version = "0.1", optional = true }
