[package]
name = "libnv"
version = "0.4.1"
authors = ["Andrey Snow <andoriyu@gmail.com>"]
categories = ["api-bindings", "data-structures", "os"]
license = "BSD-2-Clause"
description = "Safe and rustic wrapper around libnv-sys."
repository = "https://github.com/Inner-Heaven/libnv-rs"

[workspace]
members = [ ".", "libnv-sys" ]

[package.metadata.release]
dev-version-ext = "pre"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

[features]
default = ["libnv", "nvpair"]
libnv = ["libnv-sys"]
nvpair = ["nvpair-sys"]

[dependencies]
libc = "0.2"
nvpair-sys = { version = "0.4.0", optional = true }
quick-error = "2.0"
libnv-sys = { path = "libnv-sys", version = "0.2", optional = true }

