[package]
name = "libnv-sys"
version = "0.1.5"
authors = ["Andrey Cherkashin <with.out@me.com>"]
links = "libnv"
build = "build.rs"
categories = ["external-ffi-bindings"]
license = "BSD-2-Clause"
description = "FFI bindings to libnv."
[lib]
name = "libnv_sys"

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.60.0", features=[] }
regex = "1.6.0"
