[package]
name = "libnv-sys"
version = "0.2.2"
authors = ["Andrey Snow <andoriyu@gmail.com>"]
links = "libnv"
build = "build.rs"
categories = ["external-ffi-bindings"]
license = "BSD-2-Clause"
description = "FFI bindings to libnv."
repository = "https://github.com/Inner-Heaven/libnv-rs"
[lib]
name = "libnv_sys"

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.66.1", features=[] }
regex = "1.6.0"
